# debug-trigger

./: OWNERS  README.md  groups  main.c  meson.build  meson_options.txt  project.config
systemd/system/: debug-trigger@.service
